# MotorOpenGL

./: README.md
CapiEngine/: CMakeLists.txt
CapiEngine/EngineCore/: CMakeLists.txt
CapiEngine/EngineCore/include/: GLApplication.h
CapiEngine/EngineCore/include/component/: Light.h  LuaScript.h  MeshRenderer.h  Transform.h
CapiEngine/EngineCore/include/core/: Camera.h  Scene.h
CapiEngine/EngineCore/include/ec/: component.h  ec.h  entity.h
CapiEngine/EngineCore/include/lighting/: GlobalLight.h  PointLight.h
CapiEngine/EngineCore/include/managers/: InputManager.h  LightManager.h  ResourceManager.h
CapiEngine/EngineCore/include/mesh/: CubeMesh.h  Mesh.h  MeshID.h  QuadMesh.h  TriangleMesh.h
CapiEngine/EngineCore/include/serialize/: JsonSerializer.h
CapiEngine/EngineCore/include/surface/: Material.h  Shader.h  Texture.h
CapiEngine/EngineCore/include/utils/: Singleton.h  logger.h
CapiEngine/EngineCore/src/: GLApplication.cpp
CapiEngine/EngineCore/src/component/: Light.cpp  LuaScript.cpp  MeshRenderer.cpp  Transform.cpp
CapiEngine/EngineCore/src/core/: Camera.cpp  Scene.cpp
CapiEngine/EngineCore/src/lighting/: GlobalLight.cpp
CapiEngine/EngineCore/src/managers/: InputManager.cpp  LightManager.cpp  ResourceManager.cpp  SceneManager.cpp
CapiEngine/EngineCore/src/mesh/: CubeMesh.cpp  Mesh.cpp  QuadMesh.cpp  TriangleMesh.cpp
CapiEngine/EngineCore/src/serialize/: JsonSerializer.cpp
CapiEngine/EngineCore/src/surface/: Material.cpp  Shader.cpp  Texture.cpp
CapiEngine/EngineCore/src/utils/: Raycast.cpp
CapiEngine/EngineEditor/: CMakeLists.txt
CapiEngine/EngineEditor/include/: EditorApp.h
CapiEngine/EngineEditor/include/drawGUI/: DrawGUI.h
CapiEngine/EngineEditor/include/drawGUI/component/: GlobalLightGUI.h  LightGUI.h  MeshRendererGUI.h  TransformGUI.h
CapiEngine/EngineEditor/include/drawGUI/material/: MaterialGUI.h
CapiEngine/EngineEditor/include/managers/: EditorResourceManager.h  UIManager.h
CapiEngine/EngineEditor/include/project/: ProjectFileData.h  ProjectLoader.h
CapiEngine/EngineEditor/include/utils/: FileExplorer.h
CapiEngine/EngineEditor/include/windows/: ConsoleWindow.h  FileExplorerWindow.h  InspectorWindow.h  LightingWindow.h  ProjectWindow.h  SceneWindow.h  UIGroups.h  ViewportWindow.h  Window.h
CapiEngine/EngineEditor/src/: EditorApp.cpp  main.cpp
CapiEngine/EngineEditor/src/drawGUI/component/: GlobalLightGUI.cpp  LightGUI.cpp  MeshRendererGUI.cpp  TransformGUI.cpp
CapiEngine/EngineEditor/src/drawGUI/material/: MaterialGUI.cpp
CapiEngine/EngineEditor/src/managers/: InputManager.cpp  UIManager.cpp
CapiEngine/EngineEditor/src/project/: ProjectFileData.cpp  ProjectLoader.cpp
CapiEngine/EngineEditor/src/utils/: ImGuiUtils.h
CapiEngine/EngineEditor/src/windows/: ConsoleWindow.cpp  FileExplorerWindow.cpp  InspectorWindow.cpp  LightingWindow.cpp  ProjectWindow.cpp  SceneWindow.cpp  ViewportWindow.cpp
CapiEngine/Runtime/: CMakeLists.txt
CapiEngine/Runtime/src/: main.cpp
Proyecto/: CMakeLists.txt  IGProjects.props
Proyecto/IG1App/: IG1App.vcxproj  IG1App.vcxproj.filters  main.cpp
Proyecto1/: Proyecto1.capiproj
docs/: _camera_8h_source.html  _console_window_8h_source.html  _cube_mesh_8h_source.html  _g_l_application_8h_source.html  _inspector_window_8h_source.html  _mesh_renderer_8h_source.html  _scene_8h_source.html  _scene_manager_8h_source.html  _scene_window_8h_source.html  _transform_8h_source.html  _u_i_groups_8h_source.html  _u_i_manager_8h_source.html  _viewport_window_8h_source.html  _window_8h_source.html  annotated.html  annotated_dup.js  class_camera-members.html  class_camera.html  class_camera.js  class_g_l_application-members.html  class_g_l_application.html  class_g_l_application.js  classcapi_engine_1_1ui_1_1_u_i_manager-members.html  classcapi_engine_1_1ui_1_1_u_i_manager.html  classcapi_engine_1_1ui_1_1_viewport_window-members.html  classcapi_engine_1_1ui_1_1_viewport_window.html  classcapi_engine_1_1ui_1_1_viewport_window.js  classcapi_engine_1_1ui_1_1_viewport_window__inherit__graph.map  classcapi_engine_1_1ui_1_1_viewport_window__inherit__graph.md5  classcapi_engine_1_1ui_1_1_window-members.html  classcapi_engine_1_1ui_1_1_window.html  classcapi_engine_1_1ui_1_1_window__inherit__graph.map  classcapi_engine_1_1ui_1_1_window__inherit__graph.md5  classec_1_1_component-members.html  classec_1_1_component.html  classec_1_1_component.js  classec_1_1_render_component-members.html  classec_1_1_render_component.html  classec_1_1_update_component-members.html  classec_1_1_update_component.html  (+40 more)
docs/latex/: _camera_8h_source.tex  _console_window_8h_source.tex  (+29 more)
(+102 files in other folders)
